fix:fixedoverflow

--- a/PrettyLion/mainboard/static/css/indexnew.css
+++ b/PrettyLion/mainboard/static/css/indexnew.css
@@ -57,6 +57,7 @@ section{
 
 .sentence-box{
     overflow-x: hidden;
+    overflow-y: hidden;
     width:100%;
     height:100%;
 }
